--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,5 +1,6 @@
-- name: My First Website
+- name: Atm challenge
   description: Simple HTML5 site I've build during the PrepCourse
-
+  url: https://github.com/Blokkinen/atm_challenge
 - name: FizzBuzz
   description: My first Test driven ruby project
+  url: https://github.com/Blokkinen/fizz_buzz_js
